--- a/package.json
+++ b/package.json
@@ -12,23 +12,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.1.2",
-    "@angular/compiler": "~2.1.2",
-    "@angular/core": "~2.1.2",
-    "@angular/forms": "~2.1.2",
-    "@angular/http": "~2.1.2",
-    "@angular/platform-browser": "~2.1.2",
-    "@angular/platform-browser-dynamic": "~2.1.2",
+    "@angular/common": "~2.2.3",
+    "@angular/compiler": "~2.2.3",
+    "@angular/core": "~2.2.3",
+    "@angular/forms": "~2.2.3",
+    "@angular/http": "~2.2.3",
+    "@angular/platform-browser": "~2.2.3",
+    "@angular/platform-browser-dynamic": "~2.2.3",
     "@angular/router": "~3.1.0",
     "core-js": "^2.4.1",
     "d3": "^4.2.2",
+    "d3-array": "^1.0.1",
+    "d3-brush": "^1.0.3",
+    "d3-color": "^1.0.2",
+    "d3-force": "^1.0.3",
+    "d3-format": "^1.0.2",
+    "d3-hierarchy": "^1.0.2",
+    "d3-interpolate": "^1.1.1",
+    "d3-scale": "^1.0.3",
+    "d3-selection": "^1.0.2",
+    "d3-shape": "^1.0.3",
     "moment": "^2.14.1",
-    "ng2d3": "^1.5.2",
+    "ng2d3": "^1.6.2",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.7.1"
   },
   "devDependencies": {
+    "@types/d3": "^4.3.0",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.18",
