--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "d3-selection": "^1.0.2",
     "d3-shape": "^1.0.3",
     "moment": "^2.14.1",
-    "ng2d3": "^1.6.2",
-    "rxjs": "5.0.0-beta.12",
+    "ng2d3": "^1.8.1",
+    "rxjs": "5.0.0-rc.3",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.1"
   },
