--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.2.3",
-    "@angular/compiler": "~2.2.3",
-    "@angular/core": "~2.2.3",
-    "@angular/forms": "~2.2.3",
-    "@angular/http": "~2.2.3",
-    "@angular/platform-browser": "~2.2.3",
-    "@angular/platform-browser-dynamic": "~2.2.3",
-    "@angular/router": "~3.1.0",
+    "@angular/common": "~2.4.1",
+    "@angular/compiler": "~2.4.1",
+    "@angular/core": "~2.4.1",
+    "@angular/forms": "~2.4.1",
+    "@angular/http": "~2.4.1",
+    "@angular/platform-browser": "~2.4.1",
+    "@angular/platform-browser-dynamic": "~2.4.1",
+    "@angular/router": "~3.4.1",
     "core-js": "^2.4.1",
-    "d3": "^4.2.2",
+    "d3": "^4.4.0",
     "d3-array": "^1.0.1",
     "d3-brush": "^1.0.3",
     "d3-color": "^1.0.2",
@@ -32,18 +32,18 @@
     "d3-scale": "^1.0.3",
     "d3-selection": "^1.0.2",
     "d3-shape": "^1.0.3",
-    "moment": "^2.14.1",
-    "ng2d3": "^1.8.1",
-    "rxjs": "5.0.0-rc.3",
+    "moment": "^2.17.1",
+    "ngx-charts": "^3.0.2",
+    "rxjs": "5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.1"
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "@types/d3": "^4.3.0",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.18",
-    "codelyzer": "1.0.0-beta.1",
+    "angular-cli": "1.0.0-beta.24",
+    "codelyzer": "1.0.0-beta.4",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
